@@ -262,6 +262,7 @@ under the License.
     <hive.version>0.10.0</hive.version>
 
     <facebook-hadoop.version>0.20.0</facebook-hadoop.version>
+    <yourkit-api.version>9.5.6</yourkit-api.version>
     <forHadoop>for-hadoop-${hadoop.version}</forHadoop>
   </properties>
 
@@ -1016,6 +1017,11 @@ under the License.
         <groupId>commons-cli</groupId>
         <artifactId>commons-cli</artifactId>
         <version>1.2</version>
+      </dependency>
+      <dependency>
+        <groupId>com.facebook.thirdparty.yourkit-api</groupId>
+        <artifactId>yjp-controller-api-redist</artifactId>
+        <version>${yourkit-api.version}</version>
       </dependency>
       <dependency>
         <groupId>io.netty</groupId>
